RESOLVED FIXED27356
Some transitions don't work correctly on Leopard
https://bugs.webkit.org/show_bug.cgi?id=27356
Summary Some transitions don't work correctly on Leopard
Simon Fraser (smfr)
Reported 2009-07-16 16:13:57 PDT
In the demo here: http://webkit.org/blog-files/3d-transforms/morphing-cubes.html on Leopard, the z-translate on the #shape element does not transition correctly when toggling the shape; it jumps instead.
Attachments
Patch (1.92 KB, patch)
2009-07-17 09:28 PDT, Chris Marrin
hyatt: review+
Simon Fraser (smfr)
Comment 1 2009-07-16 16:29:06 PDT
Regression from bug 27310.
Charles Ying
Comment 2 2009-07-17 00:21:23 PDT
This also is causing the camera rotate to jump somewhere between r45934 and r45980 in the snow stack demo: http://www.satine.org/research/webkit/snowleopard/snowstack.html (press and hold right arrow until you hit the right wall, then start moving around -- the camera rotateY snaps between 0, 45 and -45 degrees)
Charles Ying
Comment 3 2009-07-17 01:25:44 PDT
Confirmed, this change is causing snow stack to not animate certain rotations. I added back !hasBigRotation and everything worked as before.
Chris Marrin
Comment 4 2009-07-17 09:16:26 PDT
The problem is that we can't do anything bug Matrix animation on Leopard. In the test case we are trying to do a component animation
Chris Marrin
Comment 5 2009-07-17 09:28:28 PDT
Dave Hyatt
Comment 6 2009-07-17 09:38:23 PDT
Comment on attachment 32947 [details] Patch r=me
Chris Marrin
Comment 7 2009-07-17 09:59:26 PDT
Sending WebCore/ChangeLog Sending WebCore/platform/graphics/mac/GraphicsLayerCA.mm Transmitting file data .. Committed revision 46037.
Note You need to log in before you can comment on or make changes to this bug.