        Some transitions don't work correctly on Leopard         https://bugs.webkit.org/show_bug.cgi?id=27356

We only have code to do component animation using valueFunction.
        So on Leopard we always need to do matrix animation in hardware.
        This fix ensures that.

        This is currently not testable because it appears only in the
        hardware animation and we can't yet do pixel tests while
        hardware animating.



Canonical link: https://commits.webkit.org/37661@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46037 268f45cc-cd09-0410-ab3c-d52691b4dbfc